app/main/default/objects/Flosum__Patch__c/fields/Flosum__Inherited_From_Patch__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Inherited_From_Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inherited From Patch</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Patches</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>