app/main/default/objects/Flosum__Patch__c/fields/Flosum__Order__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>