app/main/default/objects/Flosum__Patch__c/fields/Flosum__Total_Items__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Total_Items__c</fullName>
        <label>Total Items in Deployment</label>
        <summaryForeignKey>Flosum__Patch_Manifest__c.Flosum__Patch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>