app/main/default/objects/Flosum__Patch__c/fields/Flosum__Total_Items_in_Patch_Repository__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Total_Items_in_Patch_Repository__c</fullName>
        <label>Total Items in Deployment (Repository)</label>
        <summaryForeignKey>Flosum__Repository_Manifest__c.Flosum__Patch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>