app/main/default/objects/Flosum__Patch__c/fields/Flosum__TransactionId__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__TransactionId__c</fullName>
        <externalId>true</externalId>
        <label>TransactionId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
</CustomObject>