app/main/default/objects/Flosum__Patch__c/fields/Regression_Test_Classes__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Regression_Test_Classes__c</fullName>
        <label>Regression Test Classes</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>